Enable local docker deploy and minor api changes

--- a/Organizer.Calendar/Dockerfile
+++ b/Organizer.Calendar/Dockerfile
@@ -8,13 +8,17 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["Src/Calendar.Api/Calendar.Api/Calendar.Api.csproj", "Src/Calendar.Api/Calendar.Api/"]
+COPY ["Src/Calendar.Application/Calendar.Application.csproj", "Src/Calendar.Application/"]
+COPY ["Src/Calendar.Domain/Calendar.Domain.csproj", "Src/Calendar.Domain/"]
+COPY ["Src/Calendar.Migrations/Calendar.Migrations.csproj", "Src/Calendar.Migrations/"]
+COPY ["Src/Calendar.Persistence/Calendar.Persistence.csproj", "Src/Calendar.Persistence/"]
 RUN dotnet restore "Src/Calendar.Api/Calendar.Api/Calendar.Api.csproj"
 COPY . .
 WORKDIR "/src/Src/Calendar.Api/Calendar.Api"
 RUN dotnet build "Calendar.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Calendar.Api.csproj" -c Release -o /app/publish
+RUN dotnet publish "Calendar.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
