--- a/Organizer.Calendar/Src/Calendar.Api/Calendar.Api/appsettings.json
+++ b/Organizer.Calendar/Src/Calendar.Api/Calendar.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CalendarDb": "Host=localhost;Username=postgres;Password=sa;Database=calendar",
+    "CalendarDbDocker": "Host=192.168.1.5:5432;Username=postgres;Password=sa;Database=calendar"
+  }
 }
