--- a/Organizer.Calendar/Src/Calendar.Api/appsettings.json
+++ b/Organizer.Calendar/Src/Calendar.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CalendarDb": "Host=localhost;Username=postgres;Password=sa;Database=calendar",
-    "CalendarDbDocker": "Host=192.168.1.5:5432;Username=postgres;Password=sa;Database=calendar"
+    "CalendarDbDocker": "Host=localhost;Username=sa;Password=mysecretpassword;Database=calendar"
   }
 }
