Update docker file & add debug tools

--- a/Organizer.Calendar/Dockerfile
+++ b/Organizer.Calendar/Dockerfile
@@ -7,15 +7,21 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["Src/Calendar.Api/Calendar.Api/Calendar.Api.csproj", "Src/Calendar.Api/Calendar.Api/"]
+COPY ["Src/Calendar.Api/Calendar.Api.csproj", "Src/Calendar.Api/"]
 COPY ["Src/Calendar.Application/Calendar.Application.csproj", "Src/Calendar.Application/"]
 COPY ["Src/Calendar.Domain/Calendar.Domain.csproj", "Src/Calendar.Domain/"]
 COPY ["Src/Calendar.Migrations/Calendar.Migrations.csproj", "Src/Calendar.Migrations/"]
 COPY ["Src/Calendar.Persistence/Calendar.Persistence.csproj", "Src/Calendar.Persistence/"]
-RUN dotnet restore "Src/Calendar.Api/Calendar.Api/Calendar.Api.csproj"
+RUN dotnet restore "Src/Calendar.Api/Calendar.Api.csproj"
 COPY . .
-WORKDIR "/src/Src/Calendar.Api/Calendar.Api"
+WORKDIR "/src/Src/Calendar.Api"
 RUN dotnet build "Calendar.Api.csproj" -c Release -o /app/build
+
+# Install dotnet debug tools
+RUN dotnet tool install --tool-path /tools dotnet-trace \
+ && dotnet tool install --tool-path /tools dotnet-counters \
+ && dotnet tool install --tool-path /tools dotnet-dump \
+ && dotnet tool install --tool-path /tools dotnet-gcdump
 
 FROM build AS publish
 RUN dotnet publish "Calendar.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
@@ -23,4 +29,8 @@ RUN dotnet publish "Calendar.Api.csproj" -c Release -o /app/publish /p:UseAppHos
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+# Copy dotnet-tools
+COPY --from=build /tools /tools
+
 ENTRYPOINT ["dotnet", "Calendar.Api.dll"]
