--- a/Organizer.Calendar/Src/Calendar.Application/Calendar.Application.csproj
+++ b/Organizer.Calendar/Src/Calendar.Application/Calendar.Application.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="MediatR" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="OneOf" Version="3.0.243" />
   </ItemGroup>
 
   <PropertyGroup>
