Add publish of few events to rmq
These events will be consumed by other services

--- a/Organizer.Calendar/Src/Calendar.Api/appsettings.json
+++ b/Organizer.Calendar/Src/Calendar.Api/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "CalendarDb": "Host=localhost;Username=postgres;Password=sa;Database=calendar",
     "CalendarDbDocker": "Host=localhost;Username=sa;Password=mysecretpassword;Database=calendar"
+  },
+  "Broker": {
+    "Host": "localhost",
+    "VirtualHost": "/",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
