--- a/Organizer.Calendar/Src/Calendar.Application/Calendar.Application.csproj
+++ b/Organizer.Calendar/Src/Calendar.Application/Calendar.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.5.1" />
     <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.14" />
     <PackageReference Include="MediatR" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="OneOf" Version="3.0.243" />
