Add configs to work in containers env

--- a/Organizer.Calendar/Src/Calendar.Api/appsettings.Development.json
+++ b/Organizer.Calendar/Src/Calendar.Api/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CalendarDb": "Host=localhost;Username=sa;Password=mysecretpassword;Database=calendar"
+  },
+  "Broker": {
+    "Host": "localhost",
+    "VirtualHost": "/",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
