--- a/Organizer.Calendar/Src/Calendar.Api/appsettings.json
+++ b/Organizer.Calendar/Src/Calendar.Api/appsettings.json
@@ -5,15 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CalendarDb": "Host=localhost;Username=postgres;Password=sa;Database=calendar",
-    "CalendarDbDocker": "Host=localhost;Username=sa;Password=mysecretpassword;Database=calendar"
-  },
-  "Broker": {
-    "Host": "localhost",
-    "VirtualHost": "/",
-    "Username": "guest",
-    "Password": "guest"
-  }
+  "AllowedHosts": "*"
 }
