--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,9 @@ services:
     image: organizer.calendar:1.1
     ports:
       - "15000:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+  organizer-web:
+    image: organizer.web:1.0
+    ports:
+      - "4200:4200"
